added another job

--- a/.github/workflows/first-wrkflow.yml
+++ b/.github/workflows/first-wrkflow.yml
@@ -1,4 +1,4 @@
-name: Test Project
+name: Deploy Project
 on: 
   push:
     branches:
@@ -9,14 +9,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get code
-        uses: actions/checkout@v4
-        
+        uses: actions/checkout@v4  
       - name: Install NodeJs
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
       - name: Install dependencies
         run: npm ci
       - name: Run Tests
         run: npm test
+
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v4  
+      - name: Install NodeJs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+      - name: Install dependencies
+        run: npm ci
+      - name: Build Project
+        run: npm run build
+      - name: Deploy 
+        run: echo "Deploying....."
